glx/testdata/invalid/missing-required-fields/assertions/assertion-missing-property.glx
assertions:
  assertion-missing-property:
    subject:
      person: person-123
    value: "John"
    citations:
      - citation-123
